--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -342,6 +342,42 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 2/14 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Neural network basics-3</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  2/16 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Deep neural network training-1</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 2/21 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Deep neural network training-2</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  2/23 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Deep neural network training-3</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
 		
 		<!--
 		<tr>
