--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -88,25 +88,12 @@
 		<h2><font color="#FA8072">Upcoming Events</font></h2>
 
         
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Hey Genius, Don’t Forget to Take Your Test!</font></h3>
-                <p><b>Speaker:</b> <a href="https://yunhefeng.me/", target="_blank">Dr. Weishi Shi, University of North Texas</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 02/19/2024 (Monday)</p>
-                <p><b>Room:</b> Discover Park F219</p>
-            </div>
-            <div class="speaker-img">
-                <img src="welcome2.png" alt="Speaker Image"> 
-            </div>
-        </section>
-
         <section class="section speaker">
             <div class="speaker-text">
                 <h3><font color="#355DDC">TBD</font></h3>
-                <p><b>Speaker:</b> <a href="https://scholar.google.com/citations?user=nAPZIPsAAAAJ&hl=en", target="_blank">Dr. Yunhe Feng, University of North Texas</a></p>
+                <p><b>Speaker:</b> <a href="https://yunhefeng.me/", target="_blank">Dr. Yunhe Feng, University of North Texas</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02/26/2024 (Monday)</p>
-                <p><b>Room:</b> TBD</p>
+                <p><b>Room:</b> Discover Park F219</p>
             </div>
             <div class="speaker-img">
                 <img src="welcome3.png" alt="Speaker Image"> 
@@ -116,6 +103,19 @@
         <br>
 
         <h2><font color="#7FB3D5">Past Events</font></h2>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Hey Genius, Don’t Forget to Take Your Test!</font></h3>
+                <p><b>Speaker:</b> <a href="https://scholar.google.com/citations?user=nAPZIPsAAAAJ&hl=en", target="_blank">Dr. Weishi Shi, University of North Texas</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02/19/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F219</p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome2.png" alt="Speaker Image"> 
+            </div>
+        </section>
+
 
         <section class="section speaker">
             <div class="speaker-text">
