--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -231,19 +231,24 @@ course website regularly for updated reading materials.</font>
 		
 	</ol>
 	</p>
+
+	<p style="text-align:justify">
+		<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 3/10</font>):</font>
+		<ol start="7">
+			<li>
+				<font size="4" > S. Ren, K. He, R. Girshick, and J. Sun, Faster R-CNN: Towards real-time object detection with region proposal networks, <i>NIPS</i>, 2015.</font>
+			</li>
+			<li>
+				<font size="4" > J. Redmon, S. Divvala, R. Girshick, and A. Farhadi, You only look once: Unified, real-time object detection, <i>CVPR</i>, 2016.</font>
+			</li>
+			<li>
+				<font size="4" > J. Long, E. Shelhamer, and T. Darrell, Fully Convolutional Networks for Semantic Segmentation, <i>CVPR</i>, 2015.</font>
+			</li>
+		</ol>
+		</p>
 	
 	<!--
-	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 3/14</font>):</font>
-	<ol start="7">
-		<li>
-			<font size="4" > S. Ren, K. He, R. Girshick, and J. Sun, Faster R-CNN: Towards real-time object detection with region proposal networks, <i>NIPS</i>, 2015.</font>
-		</li>
-		<li>
-			<font size="4" > J. Redmon, S. Divvala, R. Girshick, and A. Farhadi, You only look once: Unified, real-time object detection, <i>CVPR</i>, 2016.</font>
-		</li>
-	</ol>
-	</p>
+	
 
     
 	<p style="text-align:justify">
@@ -401,16 +406,8 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
-		<!-- 
-
-		
-
-		
-
-		
-
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/7 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 2/20 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
@@ -423,7 +420,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/9 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/22 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
@@ -438,18 +435,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 3/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 2/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<b>Recurrent Neural Networks (RNNs)</b>
@@ -464,9 +450,9 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
-		
+
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
@@ -479,6 +465,23 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr>
+
+		
+
+		<!-- 
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br>3/28 </font></td>
