--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -466,9 +466,16 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr>
 
-		
-
-		<!-- 
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/5 <br> 3/7 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Project Proposal Preparation</b>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+		</tr>
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
@@ -481,7 +488,9 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		
+
+		<!-- 
+
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br>3/28 </font></td>
