--- a/publications.html
+++ b/publications.html
@@ -37,22 +37,6 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
-			<td><img src="./publication/cgstvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
-					<br>
-					<font color="#000000" >X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
-					<br>
-					<font>arXiv:2401.01578, 2024. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
 			<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -132,7 +116,7 @@
 			</td>
 		</tr>
 
-		 <tr>
+		 <!-- <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -146,7 +130,7 @@
 					<br>
 				</p>
 			</td>
-		</tr>
+		</tr> -->
 
 		<!-- <tr>
 			<td><img src="./publication/cctv.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -187,6 +171,54 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<tr>
+				<td><img src="./publication/cgstvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
+						<br>
+						<font color="#000000" >X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
+						<br>
+						<font>IEEE/CVF Computer Vision and Pattern Recognition Conference (<b>CVPR</b>), 2024.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/motionlearner.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">ProMotion: Prototypes As Motion Learners</font>
+						<br>
+						<font color="#000000" >Y. Lu, D. Liu, Q. Wang, C. Han, Y. Cui, Z. Cao, X. Zhang, Y. Chen, and H. Fan</font>
+						<br>
+						<font>IEEE/CVF Computer Vision and Pattern Recognition Conference (<b>CVPR</b>), 2024.</font>
+						<br>
+						<font color="#0099ff">paper (coming soon)</font> 
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/textdet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Kernel Adaptive Convolution for Scene Text Detection via Distance Map Prediction</font>
+						<br>
+						<font color="#000000" >J. Zheng, H. Fan, and L. Zhang</font>
+						<br>
+						<font>IEEE/CVF Computer Vision and Pattern Recognition Conference (<b>CVPR</b>), 2024.</font>
+						<br>
+						<font color="#0099ff">paper (coming soon)</font> 
+						<br>
+					</p>
+				</td>
+			</tr>
 	
 			<tr>
 				<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
