--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2024-02:</font> Three papers on spatio-temporal video grounding, motion learning, and text detection are accepted to <a href="https://cvpr.thecvf.com/" target="_blank"><font><font color="#0099ff">CVPR 2024</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2024-02:</font> Three papers are accepted to <a href="https://cvpr.thecvf.com/" target="_blank"><font><font color="#0099ff">CVPR 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-01:</font> Welcome PhD student Bing Fan to join our team.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-01:</font> Our MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font><font color="#0099ff">project</font></font></a>/<a href="https://github.com/yeates/MaGIC" target="_blank"><font><font color="#0099ff">code</font></font></a>) for multimodal guided image completion is accepted to <a href="https://iclr.cc/" target="_blank"><font><font color="#0099ff">ICLR 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-01:</font> Check out our CG-STVG (<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/HengLan/CGSTVG" target="_blank"><font><font color="#0099ff">code</font></font></a>) on spatio-temporal video grounding.</li>
