--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -438,10 +438,9 @@ course website regularly for updated reading materials.</font>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 2/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
-				<b>Recurrent Neural Networks (RNNs)</b>
 					<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
-						<font size="4"> Basics and Architecture </font>
+						<font size="4"> CNN Architectures and Applications (cont.) </font>
 					</li>
 					</ul>
 				
@@ -451,7 +450,26 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
+
 		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/29 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+				<font size="4"> 
+					<b>Recurrent Neural Networks (RNNs)</b>
+						<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Basics and Architecture </font>
+						</li>
+						</ul>
+					
+				</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+
+		<!-- <tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
@@ -464,7 +482,7 @@ course website regularly for updated reading materials.</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr>
+		</tr> -->
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/5 <br> 3/7 </font></td>
