--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as a guest editor for <i>ACM Journal on Autonomous Transportation Systems</i> (ACM JATS) and as Area Chairs for WACV 2022-2024.
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks, robotics with a focus on robot vision perception, and medical image analysis. He has served as a guest editor for <i>ACM Journal on Autonomous Transportation Systems</i> (ACM JATS) and as Area Chairs for WACV 2022-2024.
     
 	<HR>
 	
 	
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publication in related fields is a plus.<br>
+	<font size="3" color="#034f84"><b>To prospective students:</b></font> Please read <a href="./prospective-students.html" target="_blank"><font color="#0099ff">HERE</font></a>.
+	
+	<!-- <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publication in related fields is a plus.<br>
 
-	&nbsp; &nbsp;&nbsp; &nbsp;In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If you're interested in conducting research with me, we should talk.</font>
+	&nbsp; &nbsp;&nbsp; &nbsp;In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If you're interested in conducting research with me, we should talk.</font> -->
 	
 	<!-- <HR>
 
