--- a/publications.html
+++ b/publications.html
@@ -180,7 +180,7 @@
 						<br>
 						<font color="#000000">X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
 						<br>
-						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition, (<b>CVPR</b>), 2024 </font>
+						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
 						<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
 						<br>
@@ -196,7 +196,7 @@
 						<br>
 						<font color="#000000">Y. Lu, D. Liu, Q. Wang, C. Han, Y. Cui, Z. Cao, X. Zhang, Y. Chen, and H. Fan</font>
 						<br>
-						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition, (<b>CVPR</b>), 2024 </font>
+						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
 						paper &nbsp; code 
 						<br>
@@ -212,7 +212,7 @@
 						<br>
 						<font color="#000000">J. Zheng, H. Fan, and L. Zhang</font>
 						<br>
-						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition, (<b>CVPR</b>), 2024 </font>
+						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
 						paper &nbsp; code 
 						<br>
