--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,22 @@
 	<br>
 
 	<table border=0 cellpadding=4>
+		
+		<tr>
+			<td><img src="./publication/vasttrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">VastTrack: Vast Category Visual Object Tracking</font>
+					<br>
+					<font color="#000000" >L. Peng, J. Gao, X. Liu, W. Li, S. Dong, Z. Zhang, H. Fan<sup>&dagger;</sup>, and L. Zhang<sup>&dagger;</sup> (&dagger;equal advising)</font>
+					<br>
+					<font>	arXiv:2403.03493, 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/VastTrack" target="_blank"><font color="#0099ff">code-benchmark</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
 
 		<tr>
 			<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
