--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -96,8 +96,8 @@
             <div class="speaker-text">
                 <h3><font color="#355DDC">Small Language Model</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Hanzi Zhang</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 03/18/2024 (Monday)</p>
-                <p><b>Room:</b> Discover Park F270 </p>
+                <p><b>Time:</b> 11:00am-12:00pm on 03/25/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F219 </p>
             </div>
             <div class="speaker-img">
                 <img src="welcome4.png" alt="Speaker Image"> 
@@ -108,8 +108,8 @@
             <div class="speaker-text">
                 <h3><font color="#355DDC">TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 03/25/2024 (Monday)</p>
-                <p><b>Room:</b> Discover Park F219 </p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04/01/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F285 </p>
             </div>
             <div class="speaker-img">
                 <img src="welcome5.png" alt="Speaker Image"> 
@@ -120,8 +120,8 @@
             <div class="speaker-text">
                 <h3><font color="#355DDC">TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Xiaoqiong Liu</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 04/01/2024 (Monday)</p>
-                <p><b>Room:</b> TBD </p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04/08/2024 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
             </div>
             <div class="speaker-img">
                 <img src="welcome6.png" alt="Speaker Image"> 
