--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
 	<table border=0 cellpadding=4>
 		
 		<tr>
-			<td><img src="./publication/smot.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
