--- a/group.html
+++ b/group.html
@@ -31,7 +31,7 @@
 	<br>
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
-		<li> <font style="font-weight:bold; line-height: 120%; color: #0099ff"><a href="https://scholar.google.com/citations?user=5iSEcFkAAAAJ&hl=en" target="_blank"><font color="#0099ff">Shaohua Dong</font></a></font>, PhD student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, Master student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, Master student</li>
