--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,25 @@
 					<br>
 					<font color="#000000" >Y. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan<sup>&dagger;</sup>, and L. Zhang<sup>&dagger;</sup> (&dagger;equal advising)</font>
 					<br>
-					<font>arXiv:2403.05021. </font>
+					<font>arXiv:2403.05021, 2024.</font>
 					<br>
 					<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font color="#0099ff">paper</font></a>  &nbsp; code 
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/lorat.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Tracking Meets LoRA: Faster Training, Larger Model, Stronger Performance</font>
+					<br>
+					<font color="#000000" >L. Lin, H. Fan, Z. Zhang, Y. Wang, Y. Xu, and H. Ling</font>
+					<br>
+					<font>arXiv:2403.05231, 2024</font>
+					<br>
+					<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font color="#0099ff">paper</font></a>  &nbsp; code 
 					<br>
 				</p>
 			</td>
